src/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <label>Hours Spent (Direct Input By User)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logged_Hours__c</fullName>
        <label>Logged Hours (Time Logs)</label>
        <summarizedField>Time_Log__c.Hours_Spent__c</summarizedField>
        <summaryForeignKey>Time_Log__c.Time_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Project_Team__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Sheet__c</fullName>
        <label>Time Sheet</label>
        <referenceTo>Time_Sheet2__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Timer_Started_On__c</fullName>
        <label>Timer Started On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timer_Status__c</fullName>
        <label>Timer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Running</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Hours2__c</fullName>
        <formula>IF( Hours_Spent__c != 0 , Hours_Spent__c , Logged_Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <formula>Person__r.User__r.FirstName+&apos; &apos;+Person__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task__c</columns>
        <columns>Project__c</columns>
        <columns>User__c</columns>
        <columns>Total_Hours2__c</columns>
        <columns>Timer_Status__c</columns>
        <columns>Time_Sheet__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISPICKVAL(Time_Sheet__r.Approval_Status__c, &apos;New&apos;)), true, false)</errorConditionFormula>
        <errorMessage>Record is Locked cannot be Edited.</errorMessage>
    </validationRules>
</CustomObject>